fixed photobanner width on mobile

--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ h1, h2{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 145px;
+    height: 144px;
     margin-top: 15px;
     border-top: #2c2c2c solid 2px;
     border-bottom: #2c2c2c solid 2px;
